--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-VITE_GOMAPS_API_KEY=AlzaSySyYjDuuTRwKp4mAqyizoQe6XY8Hr175ks
+# VITE_GOMAPS_API_KEY=AlzaSySyYjDuuTRwKp4mAqyizoQe6XY8Hr175ks
+VITE_GOMAPS_API_KEY=AlzaSywl4jWbOypGVbt3dWIXZJGfUTQ5W9Oy33I
 
 VITE_GEMINI_API_KEY=AIzaSyAj13Pqs7wkeseFzjwCT2YFSz4DWztFxJI
 
