--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # VITE_GOMAPS_API_KEY=AlzaSySyYjDuuTRwKp4mAqyizoQe6XY8Hr175ks
-VITE_GOMAPS_API_KEY=AlzaSywl4jWbOypGVbt3dWIXZJGfUTQ5W9Oy33I
+# VITE_GOMAPS_API_KEY=AlzaSywl4jWbOypGVbt3dWIXZJGfUTQ5W9Oy33I
+VITE_GOOGLE_PLACE_API_KEY=AIzaSyB_xBAQ0fyoKm8hEnpKX8rjpidsN80nUTg
 
 VITE_GEMINI_API_KEY=AIzaSyAj13Pqs7wkeseFzjwCT2YFSz4DWztFxJI
 
