--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_GOOGLE_PLACE_API_KEY=AIzaSyB_xBAQ0fyoKm8hEnpKX8rjpidsN80nUTg
+VITE_GOOGLE_PLACE_API_KEY=***
 
-VITE_GEMINI_API_KEY=AIzaSyAj13Pqs7wkeseFzjwCT2YFSz4DWztFxJI
+VITE_GEMINI_API_KEY=***
 
-VITE_GOOGLE_AUTH_CLIENT_ID=574840722092-1hqnuh95ghlertdo5arbi2dgti68i9s0.apps.googleusercontent.com
+VITE_GOOGLE_AUTH_CLIENT_ID=***
